--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,6 @@ JCC = javac
 compile:
 	$(JCC) Client.java Server.java Studyhelper.java HelpObject.java ClientGUI.java Replication.java ClientThread.java
 
-server:
-	make Compile
+server: compile
 	rmiregistry &
 	java -Djava.rmi.server.codebase=file: Server &
