Bröt ut Stublist till egen klass

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 JCC = javac
 
 compile:
-	$(JCC) Client.java Server.java Studyhelper.java HelpObject.java ClientGUI.java Replication.java ClientThread.java
+	$(JCC) Client.java Server.java Studyhelper.java HelpObject.java ClientGUI.java Replication.java ClientThread.java Stublist.java
 
 server: compile
 	rmiregistry &
